PR10913: Fix error messages when unable to close certain tokens